On branch master  Changes to be committed: 	modified:   aplikasi.html 	modified:   cara_terhubung.html 	modified:   daftar_harga.html 	modified:   faq.html 	modified:   index.html 	modified:   keamanan_jaringan.html 	modified:   kesalahan_login.html 	modified:   kontak.html 	modified:   mengoptimalkan_koneksi.html 	modified:   paket_layanan.html 	modified:   penjelasan_MAC.html 	modified:   send_email.php

--- a/kontak.html
+++ b/kontak.html
@@ -51,11 +51,11 @@
         </ul>
     </div>
     <div class="map-container">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.8029333578056!2d106.45610297369909!3d-6.157142460345084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e4201d71c276f65%3A0x48c802958576f37d!2sIwonk&#39;s%20Wi-Fi!5e0!3m2!1sid!2sid!4v1718552322165!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d1983.4026789135341!2d106.4587493702698!3d-6.156817838878074!3m2!1i1024!2i768!4f13.1!3m2!1m1!2s!5e0!3m2!1sid!2sid!4v1738412273834!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <div class="info-bar">
         <div class="info-content">
-            <p>Untuk informasi lebih lanjut, hubungi kami di <a href="mailto:cs.iwongwifi@iwongwifi.biz.id">cs@iwongwifi.biz.id</a> atau kunjungi halaman <a href="faq.html">FAQ</a>.</p>
+            <p>Untuk informasi lebih lanjut, hubungi kami di <a href="mailto:cs.iwongwifi@iwongwifi.biz.id">cs.iwongwifi@iwongwifi.biz.id</a> atau kunjungi halaman <a href="faq.html">FAQ</a>.</p>
         </div>
         <div class="social-media">
             <a href="https://facebook.com" target="_blank" class="social-link"><i class="fab fa-facebook-f"></i></a>
