--- a/mengoptimalkan_koneksi.html
+++ b/mengoptimalkan_koneksi.html
@@ -71,7 +71,7 @@
         </div>
     </div>
     <div class="info-bar">
-        <p>Untuk informasi lebih lanjut, hubungi kami di <a href="mailto:cs.iwongwifi@iwongwifi.biz.id">cs@iwongwifi.biz.id</a> atau kunjungi halaman <a href="faq.html">FAQ</a>.</p>
+        <p>Untuk informasi lebih lanjut, hubungi kami di <a href="mailto:cs.iwongwifi@iwongwifi.biz.id">cs.iwongwifi@iwongwifi.biz.id</a> atau kunjungi halaman <a href="faq.html">FAQ</a>.</p>
         <div class="social-media">
             <a href="https://facebook.com" target="_blank" class="social-link"><i class="fab fa-facebook-f"></i></a>
             <a href="https://wa.me/message/Q4DHULLRYIW6N1" target="_blank" class="social-link"><i class="fab fa-whatsapp"></i></a>
