--- a/daftar_harga.html
+++ b/daftar_harga.html
@@ -74,9 +74,15 @@
             </tr>
             <tr>
                 <td>1 Bulan</td>
+                <td>RP 130.000</td>
+                <td>Tak Terbatas</td>
+                <td>7 Mbps</td>
+            </tr>
+            <tr>
+                <td>1 Bulan</td>
                 <td>RP 150.000</td>
-                <td>5 Device</td>
-                <td>unlimited</td>
+                <td>Tak Terbatas</td>
+                <td>10 Mbps</td>
             </tr>
         </table>
 
