--- a/daftar_harga.html
+++ b/daftar_harga.html
@@ -40,37 +40,37 @@
                 <td>3 Jam</td>
                 <td>RP 2.000</td>
                 <td>1 Device</td>
-                <td>unlimited</td>
+                <td>3 Mbps</td>
             </tr>
             <tr>
                 <td>6 Jam</td>
                 <td>RP 3.000</td>
                 <td>1 Device</td>
-                <td>unlimited</td>
+                <td>3 Mbps</td>
             </tr>
             <tr>
                 <td>9 Jam</td>
                 <td>RP 4.000</td>
                 <td>1 Device</td>
-                <td>unlimited</td>
+                <td>3 Mbps</td>
             </tr>
             <tr>
                 <td>12 Jam</td>
                 <td>RP 5.000</td>
                 <td>1 Device</td>
-                <td>unlimited</td>
+                <td>3 Mbps</td>
             </tr>
             <tr>
                 <td>1 Hari</td>
                 <td>RP 7.000</td>
                 <td>1 Device</td>
-                <td>unlimited</td>
+                <td>3 Mbps</td>
             </tr>
             <tr>
                 <td>1 Bulan</td>
                 <td>RP 40.000</td>
                 <td>1 Device</td>
-                <td>unlimited</td>
+                <td>3 Mbps</td>
             </tr>
             <tr>
                 <td>1 Bulan</td>
