--- a/daftar_harga.html
+++ b/daftar_harga.html
@@ -34,7 +34,7 @@
                 <th>Durasi</th>
                 <th>Harga</th>
                 <th>Device</th>
-                <th>Keterangan</th>
+                <th>Bandwidth</th>
             </tr>
             <tr>
                 <td>3 Jam</td>
