--- a/daftar_harga.html
+++ b/daftar_harga.html
@@ -89,7 +89,7 @@
         <!-- Keterangan tentang unlimited -->
         <div class="unlimited">
             <h3>Unlimited (Tanpa Batasan)</h3>
-            <p>Voucher Wi-Fi dengan durasi tanpa batasan waktu. Nikmati akses internet yang tidak terbatas dengan harga yang kompetitif. Hubungi kami untuk informasi lebih lanjut.</p>
+            <p>Voucher Wi-Fi dengan durasi tanpa batasan kuota. Nikmati akses internet yang tidak terbatas dengan harga yang kompetitif. Hubungi kami untuk informasi lebih lanjut.</p>
         </div>
 
         <!-- Penambahan konten -->
