--- a/paket_layanan.html
+++ b/paket_layanan.html
@@ -21,13 +21,14 @@
     </div>
 </header>
 
-    <nav id="sidebar">
-        <a href="javascript:void(0)" class="close-btn" id="close-btn">&times;</a>
-        <a href="index.html">Beranda</a>
-        <a href="paket_layanan.html">Paket Layanan</a>
-        <a href="faq.html">FAQ</a>
-        <a href="kontak.html">Kontak</a>
-    </nav>
+<nav id="sidebar">
+    <a href="javascript:void(0)" class="close-btn" id="close-btn">&times;</a>
+    <a href="index.html">Beranda</a>
+    <a href="paket_layanan.html">Paket Layanan</a>
+    <a href="faq.html">FAQ</a>
+    <a href="kontak.html">Kontak</a>
+    <a href="pembayaran.html">Pembayaran</a>
+</nav>
     <div class="container">
         <h2>Paket Layanan</h2>
         <div class="package">
