--- a/pembayaran.html
+++ b/pembayaran.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="id">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pembayaran Bulanan</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Daftar Harga - I Net</title>
+        <link rel="stylesheet" href="assets/css/styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <!-- Font Awesome Icons -->
+        <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
+        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    </head>
+<body>
+    <header id="header">
+        <div class="logo-container">
+            <a href="#" class="logo" id="logo">
+                <img src="assets/images/logo.png" alt="Logo I Net">
+            </a>
+            <span class="site-title">I Net</span>
+        </div>
+        <nav id="sidebar">
+            <a href="javascript:void(0)" class="close-btn" id="close-btn">&times;</a>
+            <a href="index.html">Beranda</a>
+            <a href="paket_layanan.html">Paket Layanan</a>
+            <a href="faq.html">FAQ</a>
+            <a href="kontak.html">Kontak</a>
+            <a href="pembayaran.html">Pembayaran</a>
+        </nav>
+    </header>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -185,5 +205,6 @@
             }
         }
     </script>
+    <script src="assets/js/index.js"></script>
 </body>
 </html>
