--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
             </a>
             <span class="site-title">I Net</span>
         </div>
+
+        <button id="menu-btn" class="menu-btn">☰</button>
+        
         <nav id="sidebar">
-            <a href="javascript:void(0)" class="close-btn" id="close-btn">&times;</a>
+            <a href="javascript:void(0)" id="close-btn" class="close-btn">×</a>
             <a href="index.html">Beranda</a>
             <a href="paket_layanan.html">Paket Layanan</a>
             <a href="faq.html">FAQ</a>
