--- a/pembayaran.html
+++ b/pembayaran.html
@@ -93,6 +93,33 @@
         .save-status-btn {
             background-color: #28a745;
         }
+
+        /* Ensure Responsiveness */
+@media only screen and (min-width: 769px) {
+    .menu-btn {
+        display: none; /* Hide menu button on larger screens */
+    }
+
+    /* Sidebar Navigation */
+    nav#sidebar {
+        width: 250px;
+    }
+
+    .container {
+        padding: 2rem 3rem; /* Increase padding for larger screens */
+    }
+
+    /* Header Styles */
+    header {
+        padding: 10px 20px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .info-bar {
+        padding: 20px 40px; /* Increase padding for larger screens */
+    }
+
     </style>
 </head>
 
