--- a/menu_pembayaran.html
+++ b/menu_pembayaran.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,14 @@
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <style>
+        .container {
+            max-width: 100%;
+            padding: 10px;
+            margin: auto;
+            display: none;
+            /* Sembunyikan konten sebelum verifikasi */
+        }
+
         .form-container {
             display: flex;
             flex-wrap: wrap;
@@ -18,44 +27,100 @@
             margin-bottom: 20px;
             align-items: center;
         }
-        .form-container input, .form-container button {
+
+        .form-container input,
+        .form-container button {
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
         }
+
         .form-container button {
             background-color: #007bff;
             color: white;
             border: none;
             cursor: pointer;
         }
+
         .form-container button:hover {
             background-color: #0056b3;
         }
+
+        .table-responsive {
+            overflow-x: auto;
+        }
+
         table {
             width: 100%;
             border-collapse: collapse;
+            font-size: 14px;
+            white-space: nowrap;
         }
-        th, td {
+
+        th,
+        td {
             border: 1px solid #ddd;
-            padding: 10px;
+            padding: 8px;
             text-align: center;
         }
+
         th {
             background-color: #007bff;
             color: white;
         }
+
         .action-buttons button {
             background-color: transparent;
             border: none;
             cursor: pointer;
-            font-size: 16px;
+            font-size: 14px;
         }
+
         .action-buttons button:hover {
             color: red;
         }
+
+        @media (max-width: 768px) {
+            .container {
+                max-width: 95%;
+                padding: 5px;
+            }
+
+            .table-responsive {
+                overflow-x: auto;
+            }
+
+            table {
+                font-size: 12px;
+            }
+
+            th,
+            td {
+                padding: 5px;
+            }
+
+            .action-buttons button {
+                font-size: 12px;
+            }
+        }
     </style>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            if (sessionStorage.getItem("auth") !== "granted") {
+                alert("Silakan masukkan kunci akses terlebih dahulu.");
+                window.location.href = "kunci.html";
+            } else {
+                document.querySelector(".container").style.display = "block";
+            }
+        });
+        window.addEventListener("beforeunload", function () {
+            sessionStorage.removeItem("auth");
+        });
+
+
+    </script>
 </head>
+
 <body>
     <header id="header">
         <div class="logo-container">
@@ -63,14 +128,14 @@
                 <img src="assets/images/logo.png" alt="Logo I Net">
             </a>
             <span class="site-title">I Net</span>
-        </div>        
+        </div>
         <nav id="sidebar">
             <a href="javascript:void(0)" id="close-btn" class="close-btn">×</a>
             <a href="index.html">Beranda</a>
             <a href="paket_layanan.html">Paket Layanan</a>
             <a href="faq.html">FAQ</a>
             <a href="kontak.html">Kontak</a>
-            <a href="pembayaran.html">Pembayaran</a>
+            <a href="menu_pembayaran.html">Pembayaran</a>
         </nav>
     </header>
 
@@ -85,126 +150,23 @@
             <button onclick="addCustomer()">Simpan</button>
         </div>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Customer</th>
-                    <th>Tanggal</th>
-                    <th>Nominal</th>
-                    <th>Sudah/Belum</th>
-                    <th>Aksi</th>
-                </tr>
-            </thead>
-            <tbody id="paymentTable">
-            </tbody>
-        </table>
-    </section>
-
-     <!-- Script -->
-     <script src="assets/js/index.js"></script>
-     <script>
-         document.addEventListener("DOMContentLoaded", function () {
-             loadCustomers();
-         });
- 
-         function formatCurrency() {
-             let input = document.getElementById("paymentAmount");
-             let value = input.value.replace(/[^0-9]/g, "");
-             if (value) {
-                 input.value = "Rp. " + parseInt(value).toLocaleString("id-ID");
-             }
-         }
- 
-         function addCustomer() {
-             const name = document.getElementById("customerName").value;
-             const date = document.getElementById("paymentDate").value;
-             let amount = document.getElementById("paymentAmount").value;
- 
-             if (!name || !amount) {
-                 alert("Nama dan nominal harus diisi!");
-                 return;
-             }
- 
-             const table = document.getElementById("paymentTable");
-             const row = table.insertRow();
-             row.innerHTML = `
-                 <td>${name}</td>
-                 <td>${date ? date : "-"}</td>
-                 <td>${amount}</td>
-                 <td><input type='checkbox' class='payment-status' onclick="saveCustomers()"></td>
-                 <td>
-                     <button class="edit-btn" onclick="editCustomer(this)">Edit</button>
-                     <button class="delete-btn" onclick="deleteCustomer(this)">Hapus</button>
-                 </td>
-             `;
- 
-             saveCustomers();
-         }
- 
-         function saveCustomers() {
-             const tableRows = document.querySelectorAll("#paymentTable tr");
-             let customers = [];
-             tableRows.forEach(row => {
-                 const cols = row.children;
-                 customers.push({
-                     name: cols[0].innerText,
-                     date: cols[1].innerText,
-                     amount: cols[2].innerText,
-                     paid: cols[3].children[0].checked
-                 });
-             });
-             localStorage.setItem("customers", JSON.stringify(customers));
-         }
- 
-         function loadCustomers() {
-             const customers = JSON.parse(localStorage.getItem("customers")) || [];
-             const table = document.getElementById("paymentTable");
-             customers.forEach(customer => {
-                 const row = table.insertRow();
-                 row.innerHTML = `
-                     <td>${customer.name}</td>
-                     <td>${customer.date}</td>
-                     <td>${customer.amount}</td>
-                     <td><input type='checkbox' class='payment-status' ${customer.paid ? 'checked' : ''} onclick="saveCustomers()"></td>
-                     <td>
-                         <button class="edit-btn" onclick="editCustomer(this)">Edit</button>
-                         <button class="delete-btn" onclick="deleteCustomer(this)">Hapus</button>
-                     </td>
-                 `;
-             });
-         }
- 
-         function deleteCustomer(button) {
-             button.parentElement.parentElement.remove();
-             saveCustomers();
-         }
- 
-         function editCustomer(button) {
-             let row = button.parentElement.parentElement;
-             let name = prompt("Edit Nama Customer", row.cells[0].innerText);
-             let date = prompt("Edit Tanggal", row.cells[1].innerText);
-             let amount = prompt("Edit Nominal", row.cells[2].innerText);
- 
-             if (name && amount) {
-                 row.cells[0].innerText = name;
-                 row.cells[1].innerText = date;
-                 row.cells[2].innerText = amount;
-                 saveCustomers();
-             }
-         }
-
-     </script>
-    
-    <div class="info-bar">
-        <p>Untuk informasi lebih lanjut, hubungi kami di <a href="mailto:cs.iwongwifi@iwongwifi.biz.id">cs.iwongwifi@iwongwifi.biz.id</a> atau kunjungi halaman <a href="faq.html">FAQ</a>.</p>
-        <div class="social-media">
-            <a href="https://facebook.com" target="_blank" class="social-link"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://wa.me/message/Q4DHULLRYIW6N1" target="_blank" class="social-link"><i class="fab fa-whatsapp"></i></a>
-            <a href="https://www.instagram.com/xwaaan__?igsh=eHY1ZnR0dWtpZTNq" target="_blank" class="social-link"><i class="fab fa-instagram"></i></a>
+        <div class="table-responsive">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Customer</th>
+                        <th>Tanggal</th>
+                        <th>Nominal</th>
+                        <th>Sudah/Belum</th>
+                        <th>Aksi</th>
+                    </tr>
+                </thead>
+                <tbody id="paymentTable">
+                </tbody>
+            </table>
         </div>
-        <p>&copy; 2024 I Net. All rights reserved.</p>
-    </div>
-    
+    </section>
     <script src="assets/js/index.js"></script>
 </body>
+
 </html>
