--- a/penjelasan_MAC.html
+++ b/penjelasan_MAC.html
@@ -24,7 +24,7 @@
             <a href="paket_layanan.html">Paket Layanan</a>
             <a href="faq.html">FAQ</a>
             <a href="kontak.html">Kontak</a>
-            <a href="pembayaran.html">Pembayaran</a>
+            <a href="menu_pembayaran.html">Pembayaran</a>
         </nav>
     </header>
     <div class="container">
