--- a/menu_pembayaran.html
+++ b/menu_pembayaran.html
@@ -166,6 +166,15 @@
             </table>
         </div>
     </section>
+    <div class="info-bar">
+        <p>Untuk informasi lebih lanjut, hubungi kami di <a href="mailto:cs.iwongwifi@iwongwifi.biz.id">cs.iwongwifi@iwongwifi.biz.id</a> atau kunjungi halaman <a href="faq.html">FAQ</a>.</p>
+        <div class="social-media">
+            <a href="https://facebook.com" target="_blank" class="social-link"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://wa.me/message/Q4DHULLRYIW6N1" target="_blank" class="social-link"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/xwaaan__?igsh=eHY1ZnR0dWtpZTNq" target="_blank" class="social-link"><i class="fab fa-instagram"></i></a>
+        </div>
+        <p>&copy; 2024 I Net. All rights reserved.</p>
+    </div>
     <script src="assets/js/index.js"></script>
 </body>
 
